# hestia

./: .gitignore  ARCHITECTURE.md  AUDIT.md  MARKET.md  MEMORY-DESIGN.md  README.md  SECURITY.md
benchmarks/: RESULTS.md  bench.py  cases.json  download.sh  models.json  stress.py  stress_cases.json
brain/: MODEL_EVAL.md  PEST_WATCH.md  SFT_DATASET.md  config.py  eval_heldout.py  eval_keymatch.py  eval_models.py  garden_watch.py  hestia.py  memory_store.py  note_taker.py  prompt.py  pyproject.toml  records_store.py  reminders_store.py  reminders_tick.py  review_notes.py  seed_garden.py  sft_gen.py  sft_gen_v2.py
brain/skills/garden_bed/: SKILL.md
brain/skills/garden_bed/references/: decide.md  knowledge.md  learn.md
brain/skills/home_control/: SKILL.md
brain/skills/recipe/: SKILL.md
brain/skills/whelping/: SKILL.md
brain/skills/whelping/references/: decide.md  knowledge.md  learn.md
brain/skills/wildlife/: SKILL.md
brain/tests/: conftest.py  test_dispatch.py  test_memory_store.py  test_note_taker.py  test_photo_ingest.py  test_recipe.py  test_records_store.py  test_reminder.py  test_status.py
brain/tools/: __init__.py  home.py  media.py  memory_tool.py  recipe.py  records.py  reminder.py  search.py  skill.py  status.py  weather.py
brain/train/: Modelfile.tmpl  README.md  register.sh  requirements.txt  train_lora.py
brain/voice/: .gitignore  pyproject.toml  spike.py
brain/voice/services/: pyproject.toml
clients/: chat.html
deploy/: hestiactl  hosts.env.example
deploy/backup/: OFFSITE-RUNBOOK.md  hestia-backup.sh  (+2 more)
memory/: README.md
(+28 files in other folders)
